added a smooth gradient in the background

--- a/apps/web/content/usage.mdx
+++ b/apps/web/content/usage.mdx
@@ -1,6 +1,7 @@
 ```js
-pc(1000000) // 1M
+pc(1000000) // 1million
 pc(1000000000, {
-    scale: "indian"
-}) //1Ar  
+    scale: "indian",
+    showFullSymbol: false
+}) //1Ar
 ```
